--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
 		"eslint-plugin-svelte": "^2.30.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"sass": "^1.69.5",
 		"svelte": "^4.2.7",
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-preprocess": "^5.1.2"
+	}
 }
