--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#1aa61a",
-        "activityBar.background": "#1aa61a",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#c8c8f6",
+        "activityBar.activeBackground": "#c65ebb",
+        "activityBar.background": "#c65ebb",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#c3cd72",
         "activityBarBadge.foreground": "#15202b",
         "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#1aa61a",
-        "statusBar.background": "#137a13",
+        "sash.hoverBorder": "#c65ebb",
+        "statusBar.background": "#b23fa6",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#1aa61a",
-        "statusBarItem.remoteBackground": "#137a13",
+        "statusBarItem.hoverBackground": "#c65ebb",
+        "statusBarItem.remoteBackground": "#b23fa6",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#137a13",
+        "titleBar.activeBackground": "#b23fa6",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#137a1399",
+        "titleBar.inactiveBackground": "#b23fa699",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#137A13"
+    "peacock.color": "#B23FA6"
 }
