--- a/package.json
+++ b/package.json
@@ -13,21 +13,22 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.27.4",
-		"eslint": "^8.28.0",
+		"@playwright/test": "^1.40.1",
+		"@sveltejs/adapter-auto": "^3.1.0",
+		"@sveltejs/kit": "^2.0.8",
+		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.30.0",
+		"eslint-plugin-svelte": "^2.35.1",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"sass": "^1.69.5",
-		"svelte": "^4.2.7",
-		"vite": "^4.4.2",
-		"vitest": "^0.32.2"
+		"sass": "^1.69.7",
+		"svelte": "^4.2.8",
+		"vite": "^5.0.11",
+		"vitest": "^1.1.3"
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-cloudflare": "^3.0.1",
 		"svelte-preprocess": "^5.1.3"
 	}
 }
